--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
-  <base href="/webMulti/">
+  <!-- <base href="./"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -74,7 +75,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>menu</title>
   <link rel="manifest" href="manifest.json">
@@ -88,7 +89,8 @@
 
   <!-- CSS for the loading screen -->
   <style>
-    body, html {
+    body,
+    html {
       margin: 0;
       padding: 0;
       width: 100%;
@@ -99,12 +101,14 @@
       background-color: #f3f4f6;
       font-family: Arial, sans-serif;
     }
+
     .loading-screen {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
     }
+
     .spinner {
       border: 4px solid rgba(0, 0, 0, 0.1);
       border-top: 4px solid #3498db;
@@ -113,10 +117,17 @@
       height: 40px;
       animation: spin 1s linear infinite;
     }
+
     @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
     }
+
     .loading-text {
       margin-top: 16px;
       font-size: 18px;
@@ -124,27 +135,29 @@
     }
   </style>
 </head>
+
 <body>
-<div class="loading-screen">
-  <div class="spinner"></div>
-  <div class="loading-text">يرجى الانتظار</div>
-</div>
-<script>
-  window.addEventListener('load', function(ev) {
-    // Download main.dart.js
-    _flutter.loader.loadEntrypoint({
-      serviceWorker: {
-        serviceWorkerVersion: serviceWorkerVersion,
-      },
-      onEntrypointLoaded: function(engineInitializer) {
-        engineInitializer.initializeEngine().then(function(appRunner) {
-          appRunner.runApp();
-          // Hide loading screen
-          document.querySelector('.loading-screen').style.display = 'none';
-        });
-      }
+  <div class="loading-screen">
+    <div class="spinner"></div>
+    <div class="loading-text">يرجى الانتظار</div>
+  </div>
+  <script>
+    window.addEventListener('load', function (ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        },
+        onEntrypointLoaded: function (engineInitializer) {
+          engineInitializer.initializeEngine().then(function (appRunner) {
+            appRunner.runApp();
+            // Hide loading screen
+            document.querySelector('.loading-screen').style.display = 'none';
+          });
+        }
+      });
     });
-  });
-</script>
+  </script>
 </body>
+
 </html>
