--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!--  <script>-->
 <!--    // The value below is injected by flutter build, do not touch.-->
-<!--    const serviceWorkerVersion = "4153487104";-->
+<!--    const serviceWorkerVersion = "3562147599";-->
 <!--  </script>-->
 <!--  &lt;!&ndash; This script adds the flutter initialization JS code &ndash;&gt;-->
 <!--  <script src="flutter.js" defer></script>-->
@@ -60,23 +60,22 @@
 
 <!DOCTYPE html>
 <html>
-
 <head>
   <base href="./">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
-  <meta name="mobile-web-app-capable" content="yes">
 
   <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="menu">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>menu</title>
   <link rel="manifest" href="manifest.json">
@@ -90,8 +89,7 @@
 
   <!-- CSS for the loading screen -->
   <style>
-    body,
-    html {
+    body, html {
       margin: 0;
       padding: 0;
       width: 100%;
@@ -102,14 +100,12 @@
       background-color: #f3f4f6;
       font-family: Arial, sans-serif;
     }
-
     .loading-screen {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
     }
-
     .spinner {
       border: 4px solid rgba(0, 0, 0, 0.1);
       border-top: 4px solid #3498db;
@@ -118,17 +114,10 @@
       height: 40px;
       animation: spin 1s linear infinite;
     }
-
     @keyframes spin {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      100% {
-        transform: rotate(360deg);
-      }
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
-
     .loading-text {
       margin-top: 16px;
       font-size: 18px;
@@ -136,29 +125,28 @@
     }
   </style>
 </head>
-
 <body>
-  <div class="loading-screen">
-    <div class="spinner"></div>
-    <div class="loading-text">يرجى الانتظار</div>
-  </div>
-  <script>
-    window.addEventListener('load', function (ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine().then(function (appRunner) {
-            appRunner.runApp();
-            // Hide loading screen
-            document.querySelector('.loading-screen').style.display = 'none';
-          });
-        }
-      });
-    });
-  </script>
-</body>
+<div class="loading-screen">
+  <div class="spinner"></div>
+  <div class="loading-text">يرجى الانتظار</div>
+</div>
 
+<script>
+  window.addEventListener('load', function(ev) {
+    // Download main.dart.js
+    _flutter.loader.loadEntrypoint({
+      serviceWorker: {
+        serviceWorkerVersion: serviceWorkerVersion,
+      },
+      onEntrypointLoaded: function(engineInitializer) {
+        engineInitializer.initializeEngine().then(function(appRunner) {
+          appRunner.runApp();
+          // Hide loading screen
+          document.querySelector('.loading-screen').style.display = 'none';
+        });
+      }
+    });
+  });
+</script>
+</body>
 </html>
