--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!--  <script>-->
 <!--    // The value below is injected by flutter build, do not touch.-->
-<!--    const serviceWorkerVersion = "1176499527";-->
+<!--    const serviceWorkerVersion = "1698360159";-->
 <!--  </script>-->
 <!--  &lt;!&ndash; This script adds the flutter initialization JS code &ndash;&gt;-->
 <!--  <script src="flutter.js" defer></script>-->
@@ -61,7 +61,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="./">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
